# ocaml-timed

./: .gitignore  .travis.yml  CHANGELOG.md  GNUmakefile  LICENSE  META  Makefile  README.md  dune  dune-project  test.ml  timed.ml  timed.mli  timed.opam  timed_compat.ml  timed_compat.mli
.github/workflows/: ci.yml
docs/1.0/: index.html
docs/1.0/timed/: index.html
docs/1.0/timed/Timed/: index.html
docs/1.0/timed/Timed/Time/: index.html
docs/1.0/timed/Timed_compat/: index.html
docs/1.0/timed/Timed_compat/Time/: index.html
tests/: dune  example.ml  example_compat.ml  test.ml  test2.ml  test2_compat.ml  test_compat.ml
